# fun-facts

./: CONTRIBUTING.md  README.md
.github/workflows/: deploy.yml
data/: NETS_213_Final_Project_Survey_Results_Milestone_4.ipynb  NETS_213_Wikipedia_Fun_Facts_Script.ipynb  class_mturk_results.csv  fiction_gpt.txt  final_output.csv  fun_facts.csv  gpt_facts.txt  mturk_aggregated_results.csv  mturk_qc_raw.csv  nets_213_wikipedia_fun_facts_script.py  pyproject.toml  quality_control.py  random_wikipedia_facts.csv  regular_mturk_responses.csv  upload_data.ipynb  wikipedia_content.txt
docs/: README(Analysis Plan).md  README.md
src/backend/: aggregation.py  load_data.py  main.py  models.py  pyproject.toml  quality_control.py  sample_aggregated_output.json  sample_fiction.txt  sample_qc_output.json  utils.py
src/backend/frontend/: asset-manifest.json  index.html
src/backend/frontend/static/css/: main.bc666ef2.css  main.bc666ef2.css.map
src/backend/frontend/static/js/: main.ca0423e0.js  main.ca0423e0.js.map
src/backend/routes/: accounts.py  auth.py  items.py  leaderboard.py  protected.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.tsx  api.ts  index.tsx
src/frontend/src/components/: LoginRegister.tsx  NavBar.tsx
src/frontend/src/pages/: AdminJudgingPage.tsx  GamePage.tsx  LeaderboardPage.tsx  SubmitFactPage.tsx
